--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,12 @@
-<html>
-<head>
-<title>page
-</head>
+<!DOCTYPEhtml>.
+<htlm>
 <body>
+<h1>ephonebook</h1>
+<p>ephonebook is what you need for your modern life.just a simple clik the wala the phone number you need is in the screen.
+</p>
+<p>no more flipping pages.
+</p>  
+ 
+
+<body>
+</htlm>
