--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<htlm>
+<html>
 <head>
 <title>Ethiopia</title>
 <style>
@@ -25,4 +25,4 @@ Addis Ababa.</p>
 
 
 </body>
-</htlm>
+</html>
