--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
   h1{
     color:rgb(34,0,256);
     
-  }background-color:rgb();
+  }background-color:rgb(green);
   body{
     
   }
@@ -16,7 +16,8 @@
 <h1>Ethiopia</h1>
 <p><strong>Ethiopia</strong>is a country located in the Horn of Africa. It is bordered by<em>Eritrea</em>to the north and northeast,Djibouti and  to the east, Sudan and South Sudan to the west, and Kenya to the south. With about 87.9 million inhabitants,Ethiopia is the most populous landlocked country in the world, as well as the second-most populated nation on the African continent.It occupies a total area of 1,100,000 square kilometers (420,000 sq mi), and its capital and largest city is 
 Addis Ababa.</p>
-<img src="https://www.google.com/search?q=ethiopia+map&biw=1280&bih=711&tbm=isch&imgil=or4IkbTR6c72MM%253A%253BtjZfXZybVwYj9M%253Bhttp%25253A%25252F%25252Fwww.worldatlas.com%25252Fwebimage%25252Fcountrys%25252Fafrica%25252Fet.htm&source=iu&pf=m&fir=or4IkbTR6c72MM%253A%252CtjZfXZybVwYj9M%252C_&usg=__HyRcT77vTs6fh_u-uiOHhw4tprM%3D&ved=0CCsQyjc&ei=1K3PVPbdBs_moASftYBw#imgdii=_&imgrc=IQkK3Cqinb2dyM%253A%3B_5xvWvR7xpejKM%3Bhttp%253A%252F%252Fimg1.wikia.nocookie.net%252F__cb20120701091809%252Falthistory%252Fimages%252F5%252F53%252FLocation-map-ethiopia-1-.gif%3Bhttp%253A%252F%252Falthistory.wikia.com%252Fwiki%252FItalian_Ethiopia_(Greater_Europe_Map_Game)%3B480%3B472">
+<img src="http://www.worldatlas.com/webimage/countrys/africa/et.htm>
+
 
 
 
