--- a/index2.html
+++ b/index2.html
@@ -5,10 +5,8 @@
 <style>
   h1{
     color:rgb(34,0,256);
-    
-  }background-color:rgb(25,40,154);
-  body{
-    
+  body{  
+  background-color:rgb(34,0,256);
   }
 </style>
 </head>
