--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,11 @@
   body{  
   background-color:rgb(34,0,256);
   }
+  #rahel{
+    color:rgb(34,0,256);
+  }
 </style>
+
 </head>
 <body>
 <h1>Ethiopia basic info</h1>
@@ -18,28 +22,23 @@ Addis Ababa.</p>
 <h2>facts about Ethiopia</h2>
 <ul>
   <li>Ethiopians have thier own calander.
-    
-  </li>
+    </li>
   <p>the Ethiopian calendar has twelve months of exactly 30 days each plus five or six epagomenal days, which comprise a thirteenth month</p>
   <li>The oldest human remains are found in ethiopia
   </li>
-  
-<p>Ethiopia may well deserve the title Cradle of Humankind. Some of the most famous, most iconic hominid fossils have been discovered</p> within the country’s borders. Ethiopia can claim many “firsts” in the hominid record book, including first stone tools and the first Homo sapiens. 
-
+  <p>Ethiopia may well deserve the title Cradle of Humankind. Some of the most famous, most iconic hominid fossils have been discovered</p> within the country’s borders. Ethiopia can claim many “firsts” in the hominid record book, including first stone tools and the first Homo sapiens. 
 <img src="http://commons.wikimedia.org/wiki/File:Lucy_blackbg.jpg">
-  
-  <li>
-    
-  </li>
+  </ul>
+<h2> id="rahel"tourist atraction land markes.
+  </h2>
+<ul>
+<li>fasil castle</li>
+<p>fasil castle is found in gonder ethiopia.it is one of the official land mark of ethiopia. </p>
+<img src="http://en.wikipedia.org/wiki/Fasilides#mediaviewer/File:Fasilides_Palace_02.jpg">
+  <li> lalibela</li>
+<p>lalibela is found in </p> 
+  <li> </li>
 </ul>
-
-
-
-
-
-
-
-
 
 </body>
 </html>
