--- a/index2.html
+++ b/index2.html
@@ -33,11 +33,22 @@ Addis Ababa.</p>
   </h2>
 <ul>
 <li>fasil castle</li>
-<p>fasil castle is found in gonder ethiopia.it is one of the official land mark of ethiopia. </p>
+<p>fasil castleThe splendid buildings of Gondar were of brown basalt with ornament of local wine-colored tuff. Their fortress-like appearance and the use of mortar were new to Ethiopia, but the buildings contained traditional architectural features harking back to Aksum in pre-Christian and Christian times, to the rock hewn churches of Lalibela and to other earlier and later structures . </p>
 <img src="http://en.wikipedia.org/wiki/Fasilides#mediaviewer/File:Fasilides_Palace_02.jpg">
   <li> lalibela</li>
-<p>lalibela is found in </p> 
-  <li> </li>
+<p>lalibela is found in Lalibela is a town in northern Ethiopia that is famous for its 11 monolithic rock-cut churches. Lalibela is one of Ethiopia's holiest cities, second only to Aksum, and is a center of pilgrimage for much of the country. </p> 
+  <li> the ethiopian highlands 
+    
+  </li>
+  <p>semain mountain isThe Ethiopian Highlands is a rugged mass of mountains in Ethiopia, situated in the Horn region in Northeast Africa. It forms the largest continuous area of its altitude in the continent, with little of its surface falling below 1500 m (4,921 ft), while the summits reach heights of up to 4550 m (14,928 ft). It is sometimes called the Roof of Africa due to its height and large area.[1] Most of the Ethiopian Highlands are part of central and northern Ethiopia, and its northernmost portion reaches into Eritrea.</p> 
+</ul>
+
+
+<em>sourece</em>
+<ul>
+  <li><a href="#http://www.ethiopiatourismtips.com/articles/history/article_on_fasilides_fasilidescastle_history_id197.php>ethiopian tourisem tips.com</a>
+    
+  </li>
 </ul>
 
 </body>
