--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
   h1{
     color:rgb(34,0,256);
   body{  
-  background-color:rgb(34,0,256);
+  background-color:green;
   }
   #rahel{
     color:rgb(34,0,256);
