--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
 <h1>Ethiopia basic info</h1>
 <p><strong>Ethiopia</strong> is a country located in the Horn of Africa. It is bordered by<em>Eritrea </em>to the north and northeast,<em>Djibouti</em> and  to the east, <em>Sudan</em> and <em>South Sudan</em></em> to the west, and<em> Kenya</em> to the south. With about 87.9 million inhabitants,Ethiopia is the most populous landlocked country in the world, as well as the second-most populated nation on the African continent.It occupies a total area of 1,100,000 square kilometers (420,000 sq mi), and its capital and largest city is 
 Addis Ababa.</p>
-<img src="https://jelford.wordpress.com/maps-of-ethiopia">
+
 <h2>facts about Ethiopia</h2>
 <ul>
   <li>Ethiopians have thier own calander.
@@ -30,14 +30,14 @@ Addis Ababa.</p>
   <li>The oldest human remains are found in ethiopia
   </li>
   <p>Ethiopia may well deserve the title Cradle of Humankind. Some of the most famous, most iconic hominid fossils have been discovered</p> within the country’s borders. Ethiopia can claim many “firsts” in the hominid record book, including first stone tools and the first Homo sapiens. 
-<img src="http://commons.wikimedia.org/wiki/File:Lucy_blackbg.jpg">
+
   </ul>
-<h2> id="rahel"tourist atraction land markes.
+<h2 id="rahel">tourist atraction land markes.
   </h2>
 <ul>
 <li>fasil castle</li>
 <p class="fasil">fasil castleThe splendid buildings of Gondar were of brown basalt with ornament of local wine-colored tuff. Their fortress-like appearance and the use of mortar were new to Ethiopia, but the buildings contained traditional architectural features harking back to Aksum in pre-Christian and Christian times, to the rock hewn churches of Lalibela and to other earlier and later structures .</p>
-<img src="http://en.wikipedia.org/wiki/Fasilides#mediaviewer/File:Fasilides_Palace_02.jpg">
+
   <li> lalibela</li>
 <p>lalibela is found in Lalibela is a town in northern Ethiopia that is famous for its 11 monolithic rock-cut churches. Lalibela is one of Ethiopia's holiest cities, second only to Aksum, and is a center of pilgrimage for much of the country. </p> 
   <li> the ethiopian highlands 
