--- a/compro.html
+++ b/compro.html
@@ -1,4 +1,4 @@
-DOCTYPE html> 
+DOCTYPE html
  <html> 
 <head> 
  <title>compro</title> 
@@ -30,7 +30,7 @@ DOCTYPE html>
      color:blue; 
   
    }    body{ 
-     background-color:rgb(0,0,0); 
+     background-color:rgb(133,128,133); 
    } 
  </style> 
  </head> 
