--- a/compro.html
+++ b/compro.html
@@ -1,4 +1,4 @@
-DOCTYPE html
+<!DOCTYPE html>
  <html> 
 <head> 
  <title>compro</title> 
@@ -21,7 +21,7 @@ DOCTYPE html
      color:blue; 
   
    }    body{ 
-     background-color:rgb(133,128,133); 
+     background-color:rgb(,,); 
    } 
    
  </style> 
