--- a/compro.html
+++ b/compro.html
@@ -21,7 +21,7 @@
      color:blue; 
   
    }    body{ 
-     background-color:rgb(,,); 
+     background-color:rgb(93,42,189); 
    } 
    
  </style> 
