--- a/something-smart.html
+++ b/something-smart.html
@@ -7,10 +7,13 @@
  well you've found the right place to look for help.these are one of the best homework helping websites on the internet.
  No more embarressment in front of a seven years old.</p>
  <ul>
- <li><h2> khan academy</h2></li>,<a href="http://www.khanacademy.org/"</a> <br>
+ <li><h2> khan academy</h2></li>,<a href="http://www.khanacademy.org/">www.khanacademy.org <br>
  <p>khan academy provides a free world-class education for anyone,anywhere.</p>
- <li><h2>homework spot</h2></li>,<a href="http://www.homeworkspot.com"</a> <br>
+ <li><h2>homework spot</h2></li>,<a href="http://www.homeworkspot.com">www.homeworkspot.com <br>
 <p> homework spot helps with homework such as math science, social studies,technology and forign languages</p>
+<li><h2>BJ Pinchbeck's homework helper</h2></li>,<a href="http://www.bjpinchbeck.com">www.bjpinchbeck.com
+<p>Features a roundup of the best online sources for nearly every school subject, including art, music, foreign languages, math, 
+and current events.</p>
 
  
  
