--- a/something-smart.html
+++ b/something-smart.html
@@ -11,10 +11,10 @@
  <h2> khan academy</h2></li>,<a href="http://www.khanacademy.org/">www.khanacademy.org 
  <p>khan academy provides a free world-class education for anyone,anywhere.</p>
  <li>
- <h2>homework spot</h2></li>,<a href="http://www.homeworkspot.com">www.homeworkspot.com 
+ <h2> homework spot</h2></li>,<a href="http://www.homeworkspot.com">www.homeworkspot.com 
 <p> homework spot helps with homework such as math science, social studies,technology and forign languages</p>
 <li>
-<h2>BJ Pinchbeck's homework helper</h2></li>,<a href="http://www.bjpinchbeck.com"> ,www.bjpinchbeck.com
+<h2> BJ Pinchbeck's homework helper</h2></li>,<a href="http://www.bjpinchbeck.com"> www.bjpinchbeck.com
 <p>Features a roundup of the best online sources for nearly every school subject, including art, music, foreign languages, math, 
 and current events.</p>
 
