--- a/something-smart.html
+++ b/something-smart.html
@@ -8,12 +8,16 @@
  No more embarressment in front of a seven years old.</p>
  <ul>
  <li>
- <h2> khan academy</h2></li>,<a href="http://www.khanacademy.org/">www.khanacademy.org 
- <p>khan academy provides a free world-class education for anyone,anywhere.</p>
- <li>
- <h2> homework spot</h2></li>,<a href="http://www.homeworkspot.com">www.homeworkspot.com 
-<p> homework spot helps with homework such as math science, social studies,technology and forign languages</p>
+ <h2> khan Academy</h2></li>,<a href="http://www.khanacademy.org/">www.khanacademy.org 
+ <p>Khan Academy provides a free world-class education for anyone, anywhere. Khan Academy is one of the most popular websites 
+ that provides free materials and resources to help students in their learning. It has an extensive library of content,
+ including interactive challenges, assessments, and videos that any student can use.</p>
 <li>
+ <h2> homework spot</h2></li>,<a href="http://www.homeworkspot.com">www.homeworkspot.com 
+ 
+<p> homework spot helps with homework such as math science, social studies,technology and forign languages.</p>
+<li>
+
 <h2> BJ Pinchbeck's homework helper</h2></li>,<a href="http://www.bjpinchbeck.com"> www.bjpinchbeck.com
 <p>Features a roundup of the best online sources for nearly every school subject, including art, music, foreign languages, math, 
 and current events.</p>
