--- a/something-smart.html
+++ b/something-smart.html
@@ -2,6 +2,7 @@
  <html> 
 <head> 
  <title>something-smart</title> 
+ <body>
  <h1>Something-Smart</h1>
  <p>When doing your home work or helping your sisters,brothers,doughters or sons, have you got stumped by some of the questions?
  well you've found the right place to look for help.these are one of the best homework helping websites on the internet.
