--- a/something-smart.html
+++ b/something-smart.html
@@ -2,11 +2,19 @@
  <html> 
 <head> 
  <title>something-smart</title> 
- <body>
+ <body> 
+ <style>
+  body{
+   background-color:rgb(45,145,231);
+  }
+  
+  
+ </style>
  <h1>Something-Smart</h1>
- <p>When doing your home work or helping your sisters,brothers,doughters or sons, have you got stumped by some of the questions?
+ <p>When doing your home work or helping your sisters,brothers,doughters or sons, 
+ have you got stumped by some of the questions?
  well you've found the right place to look for help.these are one of the best homework helping websites on the internet.
- No more embarressment in front of a seven years old.</p>
+ No more embarressment in front of a seven years old. </p>
  <ul>
  
  <li><h2> khan Academy</li></h2>,<a href="http://www.khanacademy.org/">www.khanacademy.org 
@@ -14,7 +22,7 @@
  that provides free materials and resources to help students in their learning. It has an extensive library of content,
  including interactive challenges, assessments, and videos that any student can use.</p>
 <li>
- <h2> homework spot</li></h2>,<a href="http://www.homeworkspot.com">www.homeworkspot.com 
+ <h2> homework spot</li></h2>,<a href="http://www.homeworkspot.com"> www.homeworkspot.com 
  
 <p> homework spot helps with homework such as math science, social studies,technology and forign languages.</p>
 <li>
@@ -22,7 +30,10 @@
 <h2> BJ Pinchbeck's homework helper</h2></li>,<a href="http://www.bjpinchbeck.com"> www.bjpinchbeck.com
 <p>Features a roundup of the best online sources for nearly every school subject, including art, music, foreign languages, math, 
 and current events.</p>
-
+ 
+<li><h2> hippocampus,<a href="http://www.hippocampus.org"> www.hippocampus.org</li></h2>
+<p>hippo campus lets you explore over 5,700 free videos in 13 difrent subject areas.</p>
+<li><h2>infoplease,<a href="http://www.infoplease.com/homework/"> www.infoplease.com/homework/ </h2></li>
  
  
  
