--- a/something-smart.html
+++ b/something-smart.html
@@ -7,10 +7,15 @@
   body{
    background-color:rgb(45,145,231);
   }
-  
+   #rahel {
+            background: rgb(230, 230, 230);
+            width: 70%;
+            height: 180px;
+            overflow-y: auto;
+            overflow-x: hidden;
   
  </style>
- <h1>Something-Smart</h1>
+ <h1 id="rahel"Something-Smart</h1>
  <p>When doing your home work or helping your sisters,brothers,doughters or sons, 
  have you got stumped by some of the questions?
  well you've found the right place to look for help.these are one of the best homework helping websites on the internet.
@@ -25,19 +30,15 @@
  <h2> homework spot</li></h2>,<a href="http://www.homeworkspot.com"> www.homeworkspot.com 
  
 <p> homework spot helps with homework such as math science, social studies,technology and forign languages.</p>
-<li>
 
-<h2> BJ Pinchbeck's homework helper</h2></li>,<a href="http://www.bjpinchbeck.com"> www.bjpinchbeck.com
+
+<li><h2>BJ Pinchbeck's homework helper</li></h2>,<a href="http://www.bjpinchbeck.com"> www.bjpinchbeck.com
 <p>Features a roundup of the best online sources for nearly every school subject, including art, music, foreign languages, math, 
 and current events.</p>
  
-<li><h2> hippocampus,<a href="http://www.hippocampus.org"> www.hippocampus.org</li></h2>
+<li><h2> hippocampus,<a href="http://www.hippocampus.org">, www.hippocampus.org</li></h2>
 <p>hippo campus lets you explore over 5,700 free videos in 13 difrent subject areas.</p>
-<li><h2>infoplease,<a href="http://www.infoplease.com/homework/"> www.infoplease.com/homework/ </h2></li>
- 
- 
- 
-
+<li><h2>infoplease,<a href="http://www.infoplease.com/homework/"> www.infoplease.com/homework/</li></h2>
  
  </ul>
  </body>
