--- a/something-smart.html
+++ b/something-smart.html
@@ -22,12 +22,12 @@
  No more embarressment in front of a seven years old. </p>
  <ul>
  
- <li><h2> khan Academy</li></h2>,<a href="http://www.khanacademy.org/">www.khanacademy.org 
+ <li><h2 id="rahel"khan Academy</li></h2>,<a href="http://www.khanacademy.org/">www.khanacademy.org 
  <p>Khan Academy provides a free world-class education for anyone, anywhere. Khan Academy is one of the most popular websites 
  that provides free materials and resources to help students in their learning. It has an extensive library of content,
  including interactive challenges, assessments, and videos that any student can use.</p>
 <li>
- <h2> homework spot</li></h2>,<a href="http://www.homeworkspot.com"> www.homeworkspot.com 
+ <h2 id="rahel"homework spot</li></h2>,<a href="http://www.homeworkspot.com"> www.homeworkspot.com 
  
 <p> homework spot helps with homework such as math science, social studies,technology and forign languages.</p>
 
