--- a/something-smart.html
+++ b/something-smart.html
@@ -9,7 +9,7 @@
   }
    #rahel {
             background: rgb(230, 230, 230);
-            width: 20%;
+            width: 89%;
             height: 506px;
             overflow-y: auto;
             overflow-x: hidden;
@@ -32,13 +32,13 @@
 <p> homework spot helps with homework such as math science, social studies,technology and forign languages.</p>
 
 
-<li><h2>BJ Pinchbeck's homework helper</li></h2>,<a href="http://www.bjpinchbeck.com"> www.bjpinchbeck.com
+<li><h2 id="rahel"BJ Pinchbeck's homework helper</li></h2>,<a href="http://www.bjpinchbeck.com"> www.bjpinchbeck.com
 <p>Features a roundup of the best online sources for nearly every school subject, including art, music, foreign languages, math, 
 and current events.</p>
  
-<li><h2> hippocampus,<a href="http://www.hippocampus.org">, www.hippocampus.org</li></h2>
+<li><h2 id="rahel"</h2> hippocampus,<a href="http://www.hippocampus.org">, www.hippocampus.org</li></h2>
 <p>hippo campus lets you explore over 5,700 free videos in 13 difrent subject areas.</p>
-<li><h2>infoplease,<a href="http://www.infoplease.com/homework/"> www.infoplease.com/homework/</li></h2>
+<li><h2 id="rahel" infoplease,<a href="http://www.infoplease.com/homework/"> www.infoplease.com/homework/</li></h2>
  
  </ul>
  </body>
