--- a/something-smart.html
+++ b/something-smart.html
@@ -13,9 +13,16 @@
             height: 506px;
             overflow-y: auto;
             overflow-x: hidden;
-  
+            
+  #container {
+            width: 400px;
+            margin: auto;
+            border: 1px solid rgb(145, 0, 0);
+            border-top: 10px solid purple;
+            padding: 15px;
+        }
  </style>
- <h1 id="rahel"Something-Smart</h1>
+ <div> <h1 id="rahel"Something-Smart</h1>
  <p>When doing your home work or helping your sisters,brothers,doughters or sons, 
  have you got stumped by some of the questions?
  well you've found the right place to look for help.these are one of the best homework helping websites on the internet.
@@ -39,6 +46,8 @@ and current events.</p>
 <li><h2 id="rahel"</h2> hippocampus,<a href="http://www.hippocampus.org">, www.hippocampus.org</li></h2>
 <p>hippo campus lets you explore over 5,700 free videos in 13 difrent subject areas.</p>
 <li><h2 id="rahel" infoplease,<a href="http://www.infoplease.com/homework/"> www.infoplease.com/homework/</li></h2>
+</div>
+<div id="container></div>
  
  </ul>
  </body>
