--- a/something-smart.html
+++ b/something-smart.html
@@ -7,13 +7,7 @@
   body{
    background-color:rgb(45,145,231);
   }
-   #rahel {
-            background: rgb(230, 230, 230);
-            width: 89%;
-            height: 506px;
-            overflow-y: auto;
-            overflow-x: hidden;
-            
+   
   #container {
             width: 400px;
             margin: auto;
@@ -44,7 +38,7 @@
 and current events.</p>
  
 <li><h2 id="rahel"</h2> hippocampus,<a href="http://www.hippocampus.org">, www.hippocampus.org</li></h2>
-<p>hippo campus lets you explore over 5,700 free videos in 13 difrent subject areas.</p>
+<p id="rahel>hippo campus lets you explore over 5,700 free videos in 13 difrent subject areas.</p>
 <li><h2 id="rahel" infoplease,<a href="http://www.infoplease.com/homework/"> www.infoplease.com/homework/</li></h2>
 </div>
 <div id="container></div>
