--- a/something-smart.html
+++ b/something-smart.html
@@ -37,7 +37,7 @@
 <p>Features a roundup of the best online sources for nearly every school subject, including art, music, foreign languages, math, 
 and current events.</p>
  
-<li><h2 id="rahel"</h2> hippocampus,<a href="http://www.hippocampus.org">, www.hippocampus.org</li></h2>
+<li><h2 id="rahel"</h2> hipocampuse,<a href="http://www.hippocampus.org">,www.hippocampuse.org</li></h2>
 <p id="rahel>hippo campus lets you explore over 5,700 free videos in 13 difrent subject areas.</p>
 <li><h2 id="rahel" infoplease,<a href="http://www.infoplease.com/homework/"> www.infoplease.com/homework/</li></h2>
 </div>
