--- a/something-smart.html
+++ b/something-smart.html
@@ -5,7 +5,7 @@
  <body> 
  <style>
   body{
-   background-color:rgb(45,145,231);
+   background-color:rgb(161145,161);
   }
    
   #container {
@@ -16,32 +16,33 @@
             padding: 15px;
         }
  </style>
- <div> <h1 id="rahel"Something-Smart</h1>
+ <div id="container">
+ <h1>Something-Smart</h1>
  <p>When doing your home work or helping your sisters,brothers,doughters or sons, 
  have you got stumped by some of the questions?
  well you've found the right place to look for help.these are one of the best homework helping websites on the internet.
  No more embarressment in front of a seven years old. </p>
  <ul>
  
- <li><h2 id="rahel"khan Academy</li></h2>,<a href="http://www.khanacademy.org/">www.khanacademy.org 
+ <li><h2>khan Academy</li></h2>,<a href="http://www.khanacademy.org/">www.khanacademy.org 
  <p>Khan Academy provides a free world-class education for anyone, anywhere. Khan Academy is one of the most popular websites 
  that provides free materials and resources to help students in their learning. It has an extensive library of content,
  including interactive challenges, assessments, and videos that any student can use.</p>
 <li>
- <h2 id="rahel"homework spot</li></h2>,<a href="http://www.homeworkspot.com"> www.homeworkspot.com 
+ <h2>homework spot</li></h2>,<a href="http://www.homeworkspot.com"> www.homeworkspot.com 
  
 <p> homework spot helps with homework such as math science, social studies,technology and forign languages.</p>
 
 
-<li><h2 id="rahel"BJ Pinchbeck's homework helper</li></h2>,<a href="http://www.bjpinchbeck.com"> www.bjpinchbeck.com
+<li><h2>BJ Pinchbeck's homework helper</li></h2>,<a href="http://www.bjpinchbeck.com"> www.bjpinchbeck.com
 <p>Features a roundup of the best online sources for nearly every school subject, including art, music, foreign languages, math, 
 and current events.</p>
  
-<li><h2 id="rahel"</h2> hipocampuse,<a href="http://www.hippocampus.org">,www.hippocampuse.org</li></h2>
-<p id="rahel>hippo campus lets you explore over 5,700 free videos in 13 difrent subject areas.</p>
+<li><h2> hipocampuse,<a href="http://www.hippocampus.org">,www.hippocampuse.org</li></h2>
+<p>hippo campus lets you explore over 5,700 free videos in 13 difrent subject areas.</p>
 <li><h2 id="rahel" infoplease,<a href="http://www.infoplease.com/homework/"> www.infoplease.com/homework/</li></h2>
 </div>
-<div id="container></div>
+
  
  </ul>
  </body>
