--- a/something-smart.html
+++ b/something-smart.html
@@ -41,7 +41,10 @@ and current events.</p>
  
 <li><h2> hipocampuse,<a href="http://www.hippocampus.org">,www.hippocampuse.org</a></li></h2>
 <p>hippo campus lets you explore over 5,700 free videos in 13 difrent subject areas.</p>
-<li><h2 id="rahel" infoplease,<a href="http://www.infoplease.com/homework/"> www.infoplease.com/homework</a>/li></h2>
+<li><h2>infoplease</li></h2>,<a href="http://www.infoplease.com/homework/"> www.infoplease.com/homework</a>
+<li><h2>shamoop</h2></li><a href="http://www.shmoop.com/">,shamoop,</a>
+<p>shamoopprovides a wide variety of study materials to kids and teens to help them learn about different subject areas including literature, Math, science and many more.
+</p>
 </div>
 
  
