--- a/something-smart.html
+++ b/something-smart.html
@@ -24,11 +24,11 @@
  No more embarressment in front of a seven years old. </p>
  <ul>
  
- <li><h2>khan Academy</li></h2>,
- <a href="http://www.khanacademy.org/">www.khanacademy.org<a/> 
+ <li><h2>khan Academy</li></h2>,<a href="http://www.khanacademy.org/">,www.khanacademy.org<a/> 
  <p>Khan Academy provides a free world-class education for anyone, anywhere. Khan Academy is one of the most popular websites 
  that provides free materials and resources to help students in their learning. It has an extensive library of content,
  including interactive challenges, assessments, and videos that any student can use.</p>
+ <img src="http://www.educatorstechnology.com/2014/04/10-great-homework-help-websites-for.html">
 <li>
  <h2>homework spot</li></h2>,<a href="http://www.homeworkspot.com"> www.homeworkspot.com</a>
  
@@ -39,10 +39,10 @@
 <p>Features a roundup of the best online sources for nearly every school subject, including art, music, foreign languages, math, 
 and current events.</p>
  
-<li><h2> hipocampuse,<a href="http://www.hippocampus.org">,www.hippocampuse.org</a></li></h2>
+<li><h2> hipocampuse</li></h2>,<a href="http://www.hippocampus.org">,www.hippocampuse.org</a>
 <p>hippo campus lets you explore over 5,700 free videos in 13 difrent subject areas.</p>
 <li><h2>infoplease</li></h2>,<a href="http://www.infoplease.com/homework/"> www.infoplease.com/homework</a>
-<li><h2>shamoop</h2></li><a href="http://www.shmoop.com/">,shamoop,</a>
+<li><h2>shamoop</h2></li>,<a href="http://www.shmoop.com/">,shamoop</a>
 <p>shamoopprovides a wide variety of study materials to kids and teens to help them learn about different subject areas including literature, Math, science and many more.
 </p>
 </div>
