--- a/something-smart.html
+++ b/something-smart.html
@@ -5,7 +5,11 @@
  <body> 
  <style>
   body{
-   background-color:rgb(161145,161);
+   background-color:rgb(161,145,161);
+   
+  }
+  #somrthing-smart{
+    background-color:rgb(120,123,124);
   }
    
   #container {
@@ -17,7 +21,7 @@
         }
  </style>
  <div id="container">
- <h1>Something-Smart</h1>
+ <h1 id="something-smart>Something-Smart</h1>
  <p> When doing your home work or helping your sisters,brothers,doughters or sons, 
  have you got stumped by some of the questions?
  well you've found the right place to look for help.these are some of the best homework helping websites on the internet.
@@ -25,10 +29,11 @@
  <ul>
  
  <li><h2>khan Academy</li></h2>,<a href="http://www.khanacademy.org/">,www.khanacademy.org<a/> 
- <p<img src="http://trikeapps.com/assets/60/screenshot-large-khan.png">Khan Academy provides a free world-class education for anyone, anywhere. Khan Academy is one of the most popular websites 
+ <p>img src="http://trikeapps.com/assets/60/screenshot-large-khan.png">Khan Academy provides a free world-class education for anyone, anywhere. Khan Academy is one of the most popular websites 
  that provides free materials and resources to help students in their learning. It has an extensive library of content,
  including interactive challenges, assessments, and videos that any student can use.</p>
  <img src="http://www.educatorstechnology.com/2014/04/10-great-homework-help-websites-for.html">
+ <img src="http://trikeapps.com/assets/60/screenshot-large-khan.png">
 <li>
  <h2>homework spot</li></h2>,<a href="http://www.homeworkspot.com"> www.homeworkspot.com</a>
  
