--- a/something-smart.html
+++ b/something-smart.html
@@ -11,7 +11,10 @@
   #somrthing-smart{
     background-color:rgb(38,56,31);
   }
-   
+   #container{
+    width:700px;
+    margin:auto;
+   }
   #container {
             width: 1000px;
             hight:800px
@@ -31,25 +34,31 @@
  No more embarressment in front of a seven years old. </p>
  <ul>
  
- <li><strong></h1>khan Academy</li></strong>,<a href="http://www.khanacademy.org/">,www.khanacademy.org<a/>,
+ <li>,<a href="http://www.khanacademy.org/">khanacademy</li><a/>
  <img src="http://trikeapps.com/assets/60/screenshot-large-khan.png"alt"khan academy logo width=230></h1>><p>Khan Academy provides a free world-class education for anyone, anywhere. Khan Academy is one of the most popular websites 
  that provides free materials and resources to help students in their learning. It has an extensive library of content,
  including interactive challenges, assessments, and videos that any student can use.</p>
-<li>
- <h2>homework spot</li></h2>,<a href="http://www.homeworkspot.com"> www.homeworkspot.com</a>
+ 
+<li>homework spot</li>,<a href="http://www.homeworkspot.com">homeworkspot<li></a>
  
 <p> homework spot helps with homework such as math science, social studies,technology and forign languages.</p>
 
 
-<li><h2>BJ Pinchbeck's homework helper</li></h2>,<a href="http://www.bjpinchbeck.com">www.bjpinchbeck.com</a>
+<li><a href="http://www.bjpinchbeck.com">bjpinchbeck</a></li>
 <p>Features a roundup of the best online sources for nearly every school subject, including art, music, foreign languages, math, 
 and current events.</p>
  
-<li><h2> hipocampuse</li></h2>,<a href="http://www.hippocampus.org">,www.hippocampuse.org</a>
+<li><a href="http://www.hippocampus.org">hippocampuse</a></li>
 <p>hippo campus lets you explore over 5,700 free videos in 13 difrent subject areas.</p>
 <li><h2>infoplease</li></h2>,<a href="http://www.infoplease.com/homework/"> www.infoplease.com/homework</a>
 <li><h2>shamoop</h2></li>,<a href="http://www.shmoop.com/">,shamoop</a>
 <p>shamoopprovides a wide variety of study materials to kids and teens to help them learn about different subject areas including literature, Math, science and many more.
+</p>
+<li><a href="http://www.kidinfo.com/School_Subjects.html">kidinfo</a></li>
+<p>This website, created by an elementary school teacher, has compiled a list of homework help, reference resources, 
+and search engines for kids. You can do a search or click through the topics to find information about subjects, 
+such as insects or the history of toys.</p> 
+
 </p>
 </div>
 
