--- a/something-smart.html
+++ b/something-smart.html
@@ -26,22 +26,29 @@
  </style>
     <div id="container">
     
-      <h1 id="something-smart>Something-Smart</h1>
+   
  
- <p> When doing your home work or helping your sisters,brothers,doughters or sons, 
+ 
+ <h1>simple smart</h1>
+ 
+ When doing your home work or helping your sisters,brothers,doughters or sons, 
  have you got stumped by some of the questions?
  well you've found the right place to look for help.these are some of the best homework helping websites on the internet.
- No more embarressment in front of a seven years old. </p>
+ No more embarressment in front of a seven years old.
  <ul>
  
  <li>,<a href="http://www.khanacademy.org/">khanacademy</li><a/>
- <img src="http://trikeapps.com/assets/60/screenshot-large-khan.png"alt"khan academy logo width=230></h1>><p>Khan Academy provides a free world-class education for anyone, anywhere. Khan Academy is one of the most popular websites 
+ <img src="http://trikeapps.com/assets/60/screenshot-large-khan.png"alt"khan academy logo width"=230> 
+  
+ </h1>><p>Khan Academy provides a free world-class education for anyone, anywhere. Khan Academy is one of the most popular websites 
  that provides free materials and resources to help students in their learning. It has an extensive library of content,
  including interactive challenges, assessments, and videos that any student can use.</p>
  
-<li>homework spot</li>,<a href="http://www.homeworkspot.com">homeworkspot<li></a>
+<li><a href="http://www.homeworkspot.com">homeworkspot</a></li>
  
-<p> homework spot helps with homework such as math science, social studies,technology and forign languages.</p>
+<p>This site is a free homework information portal that provides access to K-12 homework-related sites.
+It's organized by topic and grade level for ease of use. homework spot helps with homework such as math science, 
+social studies,technology and forign languages.</p>
 
 
 <li><a href="http://www.bjpinchbeck.com">bjpinchbeck</a></li>
@@ -58,8 +65,15 @@ and current events.</p>
 <p>This website, created by an elementary school teacher, has compiled a list of homework help, reference resources, 
 and search engines for kids. You can do a search or click through the topics to find information about subjects, 
 such as insects or the history of toys.</p> 
+<li><a href="https://grockit.com/">grockit</a></li>
+<p>Deriving its name from the Robert Heinlein classic Stranger in a Strange Land, Grockit adds a social networking twist to
+online homework help. Students can review sample problems simultaneously and conduct real-time chat discussions on 
+the review page. Students can also earn badges and points as they work through practice sessions.
+In addition to online study groups, Grockit offers an Academy section based upon California state standards for 
+grades 7-12 in subjects ranging from math to language arts.</p>
 
-</p>
+
+
 </div>
 
  
