--- a/something-smart.html
+++ b/something-smart.html
@@ -5,22 +5,20 @@
  <body> 
  <style>
   body{
-   background-color:rgb(161,145,161);
+   background-color:rgb(161,,161);
    
   }
-  #somrthing-smart{
+  #simply-smart{
     background-color:rgb(38,56,31);
   }
    #container{
     width:700px;
     margin:auto;
+    border:70px;
    }
   #container {
             width: 1000px;
-            hight:800px
             margin: auto;
-            
-            
             padding: 15px;
         }
  </style>
@@ -29,12 +27,11 @@
    
  
  
- <h1>simple smart</h1>
- 
- When doing your home work or helping your sisters,brothers,doughters or sons, 
+ <h1 id="simply-smart"</h1>simple smart</h1>
+ <p></p>When doing your home work or helping your sisters,brothers,doughters or sons, 
  have you got stumped by some of the questions?
  well you've found the right place to look for help.these are some of the best homework helping websites on the internet.
- No more embarressment in front of a seven years old.
+ No more embarressment in front of a seven years old.</p>
  <ul>
  
  <li>,<a href="http://www.khanacademy.org/">khanacademy</li><a/>
@@ -56,10 +53,20 @@ social studies,technology and forign languages.</p>
 and current events.</p>
  
 <li><a href="http://www.hippocampus.org">hippocampuse</a></li>
-<p>hippo campus lets you explore over 5,700 free videos in 13 difrent subject areas.</p>
-<li><h2>infoplease</li></h2>,<a href="http://www.infoplease.com/homework/"> www.infoplease.com/homework</a>
-<li><h2>shamoop</h2></li>,<a href="http://www.shmoop.com/">,shamoop</a>
-<p>shamoopprovides a wide variety of study materials to kids and teens to help them learn about different subject areas including literature, Math, science and many more.
+<p>hippo campus lets you explore over 5,700 free videos in 13 difrent subject areas.Another free site, HippoCampus was created by 
+the Monterey Institute for Technology and Education.
+Offering multimedia presentations provided by a variety of universities and schools, the site covers subjects,
+including math, science, religion and history. No log-in or registration is needed although Adobe Flash is required to view lessons.
+HippoCampus is planning a site redesign in the summer of 2011, including additional content and features.
+Already, a history mini-site has been launched to provide in-depth study materials for U.S. history lessons.</p>
+
+
+
+<li>,<a href="http://www.infoplease.com/homework/">infoplease</a></li>
+
+<li>,<a href="http://www.shmoop.com/">,shamoop</a></li>
+<p>shamoopprovides a wide variety of study materials to kids and teens to help them learn about different subject areas including literature, 
+Math, science and many more.
 </p>
 <li><a href="http://www.kidinfo.com/School_Subjects.html">kidinfo</a></li>
 <p>This website, created by an elementary school teacher, has compiled a list of homework help, reference resources, 
