--- a/something-smart.html
+++ b/something-smart.html
@@ -5,16 +5,17 @@
  <body> 
  <style>
   body{
-   background-color:rgb(161,,161);
+   background-color:rgb(161,,161,123);
    
   }
   #simply-smart{
-    background-color:rgb(38,56,31);
+    background-color:rgb(214, 163, 43)
   }
    #container{
     width:700px;
     margin:auto;
-    border:70px;
+    border:1px;
+    patting:6px;
    }
   #container {
             width: 1000px;
