--- a/something-smart.html
+++ b/something-smart.html
@@ -36,7 +36,7 @@
  <ul>
  
  <li>,<a href="http://www.khanacademy.org/">khanacademy</li><a/>
- <img src="http://trikeapps.com/assets/60/screenshot-large-khan.png"alt"khan academy logo width"=230> 
+ <img src="http://trikeapps.com/assets/60/screenshot-large-khan.png"alt"khan academy logo width"=> 
   
  </h1>><p>Khan Academy provides a free world-class education for anyone, anywhere. Khan Academy is one of the most popular websites 
  that provides free materials and resources to help students in their learning. It has an extensive library of content,
