--- a/something-smart.html
+++ b/something-smart.html
@@ -22,6 +22,9 @@
             margin: auto;
             padding: 15px;
         }
+     .web-color{
+          color:rgb(130,7,23);
+     }
  </style>
     <div id="container">
     
@@ -35,25 +38,25 @@
  No more embarressment in front of a seven years old.</p>
  <ul>
  
- <li>,<a href="http://www.khanacademy.org/">khanacademy</li><a/>
- <img src="http://trikeapps.com/assets/60/screenshot-large-khan.png"alt"khan academy logo width"=> 
+ <li class="web-color"><a href="http://www.khanacademy.org/">khanacademy</li><a/>
+ <img src="http://trikeapps.com/assets/60/screenshot-large-khan.png"alt"khan academy logo"width=100> 
   
  </h1>><p>Khan Academy provides a free world-class education for anyone, anywhere. Khan Academy is one of the most popular websites 
  that provides free materials and resources to help students in their learning. It has an extensive library of content,
  including interactive challenges, assessments, and videos that any student can use.</p>
  
-<li><a href="http://www.homeworkspot.com">homeworkspot</a></li>
+<li class=web-color><a href="http://www.homeworkspot.com">homeworkspot</a></li>
  
 <p>This site is a free homework information portal that provides access to K-12 homework-related sites.
 It's organized by topic and grade level for ease of use. homework spot helps with homework such as math science, 
 social studies,technology and forign languages.</p>
 
 
-<li><a href="http://www.bjpinchbeck.com">bjpinchbeck</a></li>
+<li class="web-color"><a href="http://www.bjpinchbeck.com">bjpinchbeck</a></li>
 <p>Features a roundup of the best online sources for nearly every school subject, including art, music, foreign languages, math, 
 and current events.</p>
  
-<li><a href="http://www.hippocampus.org">hippocampuse</a></li>
+<li class="web-color"><a href="http://www.hippocampus.org">hippocampuse</a></li>
 <p>hippo campus lets you explore over 5,700 free videos in 13 difrent subject areas.Another free site, HippoCampus was created by 
 the Monterey Institute for Technology and Education.
 Offering multimedia presentations provided by a variety of universities and schools, the site covers subjects,
@@ -61,19 +64,17 @@ including math, science, religion and history. No log-in or registration is need
 HippoCampus is planning a site redesign in the summer of 2011, including additional content and features.
 Already, a history mini-site has been launched to provide in-depth study materials for U.S. history lessons.</p>
 
-
-
-<li>,<a href="http://www.infoplease.com/homework/">infoplease</a></li>
-
-<li>,<a href="http://www.shmoop.com/">,shamoop</a></li>
+<li class="web-color"></li><a href="http://www.shmoop.com/">shamoop</a></li>
 <p>shamoopprovides a wide variety of study materials to kids and teens to help them learn about different subject areas including literature, 
 Math, science and many more.
+
 </p>
-<li><a href="http://www.kidinfo.com/School_Subjects.html">kidinfo</a></li>
+<li class="web-color"><a href="http://www.kidinfo.com/School_Subjects.html">kidinfo</a></li>
 <p>This website, created by an elementary school teacher, has compiled a list of homework help, reference resources, 
 and search engines for kids. You can do a search or click through the topics to find information about subjects, 
-such as insects or the history of toys.</p> 
-<li><a href="https://grockit.com/">grockit</a></li>
+such as insects or the history of toys.</p>
+
+<li class="web-color"><a href="https://grockit.com/">grockit</a></li>
 <p>Deriving its name from the Robert Heinlein classic Stranger in a Strange Land, Grockit adds a social networking twist to
 online homework help. Students can review sample problems simultaneously and conduct real-time chat discussions on 
 the review page. Students can also earn badges and points as they work through practice sessions.
