--- a/something-smart.html
+++ b/something-smart.html
@@ -39,7 +39,7 @@
  <ul>
  
  <li class="web-color"<a href="http://www.khanacademy.org/">khanacademy</li><a/>
- <img src="http://trikeapps.com/assets/60/screenshot-large-khan.png"alt"khan academy logo"width=80> 
+ <img src="http://trikeapps.com/assets/60/screenshot-large-khan.png"alt"khan academy logo" width=8opx> 
   
  </h1>><p>Khan Academy provides a free world-class education for anyone, anywhere. Khan Academy is one of the most popular websites 
  that provides free materials and resources to help students in their learning. It has an extensive library of content,
@@ -64,7 +64,7 @@ including math, science, religion and history. No log-in or registration is need
 HippoCampus is planning a site redesign in the summer of 2011, including additional content and features.
 Already, a history mini-site has been launched to provide in-depth study materials for U.S. history lessons.</p>
 
-<li class="web-color"</li><a href="http://www.shmoop.com/">shamoop</a></li>
+<li class="web-color"<a href="http://www.shmoop.com/">shamoop</a></li>
 <p>shamoopprovides a wide variety of study materials to kids and teens to help them learn about different subject areas including literature, 
 Math, science and many more.
 
