--- a/something-smart.html
+++ b/something-smart.html
@@ -45,18 +45,18 @@
  that provides free materials and resources to help students in their learning. It has an extensive library of content,
  including interactive challenges, assessments, and videos that any student can use.</p>
  
-<li class=web-color <a href="http://www.homeworkspot.com">homeworkspot</a></li>
+<li class=web-color></li> <a href="http://www.homeworkspot.com">homeworkspot</a></li>
  
 <p>This site is a free homework information portal that provides access to K-12 homework-related sites.
 It's organized by topic and grade level for ease of use. homework spot helps with homework such as math science, 
 social studies,technology and forign languages.</p>
 
 
-<li class="web-color"<a href="http://www.bjpinchbeck.com">bjpinchbeck</a></li>
+<li class="web-color"></li><a href="http://www.bjpinchbeck.com">bjpinchbeck</a></li>
 <p>Features a roundup of the best online sources for nearly every school subject, including art, music, foreign languages, math, 
 and current events.</p>
  
-<li class="web-color"<a href="http://www.hippocampus.org">hippocampuse</a></li>
+<li class="web-color"></li><a href="http://www.hippocampus.org">hippocampuse</a></li>
 <p>hippo campus lets you explore over 5,700 free videos in 13 difrent subject areas.Another free site, HippoCampus was created by 
 the Monterey Institute for Technology and Education.
 Offering multimedia presentations provided by a variety of universities and schools, the site covers subjects,
@@ -74,7 +74,7 @@ Math, science and many more.
 and search engines for kids. You can do a search or click through the topics to find information about subjects, 
 such as insects or the history of toys.</p>
 
-<li class="web-color"<a href="https://grockit.com/">grockit</a></li>
+<li class="web-color"></li><a href="https://grockit.com/">grockit</a></li>
 <p>Deriving its name from the Robert Heinlein classic Stranger in a Strange Land, Grockit adds a social networking twist to
 online homework help. Students can review sample problems simultaneously and conduct real-time chat discussions on 
 the review page. Students can also earn badges and points as they work through practice sessions.
