--- a/something-smart.html
+++ b/something-smart.html
@@ -38,7 +38,7 @@
  No more embarressment in front of a seven years old.</p>
  <ul>
  
- <li class="web-color"<a href="http://www.khanacademy.org/">khanacademy</li><a/>
+ <li class="web-color"></li><a href="http://www.khanacademy.org/">khanacademy</li><a/>
  <img src="http://trikeapps.com/assets/60/screenshot-large-khan.png"alt"khan academy logo" width=180px> 
   
  </h1>><p>Khan Academy provides a free world-class education for anyone, anywhere. Khan Academy is one of the most popular websites 
