--- a/something-smart.html
+++ b/something-smart.html
@@ -21,6 +21,8 @@
             width: 1000px;
             margin: auto;
             padding: 15px;
+            border: 2px solid rgb(24,45,120);
+            padding:6px;
         }
      .web-color{
           color:rgb(130,7,23);
@@ -39,7 +41,7 @@
  <ul>
  
  <li class="web-color"></li><a href="http://www.khanacademy.org/">khanacademy</li><a/>
- <img src="http://trikeapps.com/assets/60/screenshot-large-khan.png"alt"khan academy logo" width=180px> 
+ <img src="http://trikeapps.com/assets/60/screenshot-large-khan.png"alt"khan academy logo" width=180> 
   
  </h1>><p>Khan Academy provides a free world-class education for anyone, anywhere. Khan Academy is one of the most popular websites 
  that provides free materials and resources to help students in their learning. It has an extensive library of content,
