--- a/something-smart.html
+++ b/something-smart.html
@@ -27,10 +27,11 @@
      .web-color{
           color:rgb(130,7,23);
      }
+      font-size:70px
  </style>
     <div id="container">
     p{
-    font-size:70%px
+    
     
    
  
