--- a/something-smart.html
+++ b/something-smart.html
@@ -44,21 +44,21 @@
  No more embarressment in front of a seven years old.</p>
  <ul>
  
- <li class="web-color"></li><a href="http://www.khanacademy.org/">khanacademy</li><a/>
+ <li class="web-color"><a href="http://www.khanacademy.org/">khanacademy</li><a/>
  <img src="http://trikeapps.com/assets/60/screenshot-large-khan.png"alt"khan academy logo" width=180> 
   
  </h1>><p>Khan Academy provides a free world-class education for anyone, anywhere. Khan Academy is one of the most popular websites 
  that provides free materials and resources to help students in their learning. It has an extensive library of content,
  including interactive challenges, assessments, and videos that any student can use.</p>
  
-<li class=web-color></li> <a href="http://www.homeworkspot.com">homeworkspot</a></li>
+<li class=web-color><a href="http://www.homeworkspot.com">homeworkspot</a></li>
  
 <p>This site is a free homework information portal that provides access to K-12 homework-related sites.
 It's organized by topic and grade level for ease of use. homework spot helps with homework such as math science, 
 social studies,technology and forign languages.</p>
 
 
-<li class="web-color"></li><a href="http://www.bjpinchbeck.com">bjpinchbeck</a></li>
+<li class="web-color"><a href="http://www.bjpinchbeck.com">bjpinchbeck</a></li>
 <p>Features a roundup of the best online sources for nearly every school subject, including art, music, foreign languages, math, 
 and current events.</p>
  
