--- a/something-smart.html
+++ b/something-smart.html
@@ -62,7 +62,7 @@ social studies,technology and forign languages.</p>
 <p>Features a roundup of the best online sources for nearly every school subject, including art, music, foreign languages, math, 
 and current events.</p>
  
-<li class="web-color"></li><a href="http://www.hippocampus.org">hippocampuse</a></li>
+<li class="web-color"><a href="http://www.hippocampus.org">hippocampuse</a></li>
 <p>hippo campus lets you explore over 5,700 free videos in 13 difrent subject areas.Another free site, HippoCampus was created by 
 the Monterey Institute for Technology and Education.
 Offering multimedia presentations provided by a variety of universities and schools, the site covers subjects,
@@ -70,17 +70,17 @@ including math, science, religion and history. No log-in or registration is need
 HippoCampus is planning a site redesign in the summer of 2011, including additional content and features.
 Already, a history mini-site has been launched to provide in-depth study materials for U.S. history lessons.</p>
 
-<li class="web-color"></li><a href="http://www.shmoop.com/">shamoop</a></li>
+<li class="web-color"><a href="http://www.shmoop.com/">shamoop</a></li>
 <p>shamoopprovides a wide variety of study materials to kids and teens to help them learn about different subject areas including literature, 
 Math, science and many more.
 
 </p>
-<li class="web-color"></li><a href="http://www.kidinfo.com/School_Subjects.html">kidinfo</a></li>
+<li class="web-color"><a href="http://www.kidinfo.com/School_Subjects.html">kidinfo</a></li>
 <p>This website, created by an elementary school teacher, has compiled a list of homework help, reference resources, 
 and search engines for kids. You can do a search or click through the topics to find information about subjects, 
 such as insects or the history of toys.</p>
 
-<li class="web-color"></li><a href="https://grockit.com/">grockit</a></li>
+<li class="web-color"><a href="https://grockit.com/">grockit</a></li>
 <p>Deriving its name from the Robert Heinlein classic Stranger in a Strange Land, Grockit adds a social networking twist to
 online homework help. Students can review sample problems simultaneously and conduct real-time chat discussions on 
 the review page. Students can also earn badges and points as they work through practice sessions.
