--- a/something-smart.html
+++ b/something-smart.html
@@ -21,7 +21,7 @@
             width: 1000px;
             margin: auto;
             padding: 15px;
-            border: 2px solid rgb(24,45,120);
+            border: 2px solid rgb();
             padding:6px;
         }
      .web-color{
