--- a/something-smart.html
+++ b/something-smart.html
@@ -21,7 +21,7 @@
             width: 1000px;
             margin: auto;
             padding: 15px;
-            border: 2px solid rgb();
+            border: 2px solid rgb(0,0,0);
             padding:6px;
         }
      .web-color{
